--- a/Home.html
+++ b/Home.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Styles/Portfolio.css" />    
 </head>
-<body id="myPhoto" style="color:white;">
-    <div class="container-fluid">
+<body id="myPhoto" style="color: white;">
+    <div class="container-fluid" id="centerdiv">
         <div class="row">
             <div class="col-xs-12 text-right">
                     <nav style="font-size: 24px; font-weight: bold;">
@@ -22,13 +23,63 @@
             </div>
         </div>    
         <div class="row" id="mainContent">
-            <div class="col-xs-12" id="centerdiv">
+            <div class="col-xs-12">
                 <h1 style="font-family: 'Source Sans Pro', sans-serif; font-weight: bold; font-size: 60px;">Dayanithy Mani</h1>
-                <h4 style="color: #ff6a00; font-family: 'Source Serif Pro', serif; font-size: 24px;">Developer, Project Lead and Design Enthusiast</h4>
+                <h4 style="font-family: 'Source Sans Pro', sans-serif; font-size: 24px;">Developer, Project Lead and Design Enthusiast</h4>
                 <!--<img id="bgImage" src='' />-->
                 <!--<em>"Over 9 years of experience in software development across industries!!"</em>-->
             </div>
-        </div>    
+        </div>
+        <div class="row" style="padding-top: 5%;">
+            <div class="col-xs-12 col-sm-3">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <i class="fa fa-user-secret fa-4x"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Over 9 years of experience in software development across industries!!</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <i class="fa fa-google fa-4x"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Love Google</h3> for inventing some of the best (arguably) products
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-3">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <i class="fa fa-apple fa-4x"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Admire Apple</h3> for their design and user interface
+                    </div>
+                </div>
+            </div>
+             <div class="col-xs-12 col-sm-3">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <i class="fa fa-windows fa-4x"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <h3>Respect Microsoft</h3> for constantly trying to improve their products
+                    </div>
+                </div>
+            </div>
+        </div>            
     </div>
     <footer>
         <p class="text-center">&copy; 2016 - Dayanithy Mani</p>
