--- a/Home.html
+++ b/Home.html
@@ -7,87 +7,153 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Styles/Portfolio.css" />    
+    <link rel="stylesheet" href="Styles/Custom.css" />    
 </head>
-<body id="myPhoto" style="color: white;">
-    <div class="container-fluid" id="centerdiv">
-        <div class="row">
-            <div class="col-xs-12 text-right">
-                    <nav style="font-size: 24px; font-weight: bold;">
-                        <a href="Home.html">Home</a> |
-                        <a href="work.html">What I do</a> |
-                        <a href="fun.html">What I love</a> |
-                        <a href="contact.html">Wanna say hi</a>
-                    </nav>
+<body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#SiteNav" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Daya</a>
             </div>
-        </div>    
-        <div class="row" id="mainContent">
-            <div class="col-xs-12">
-                <h1 style="font-family: 'Source Sans Pro', sans-serif; font-weight: bold; font-size: 60px;">Dayanithy Mani</h1>
-                <h4 style="font-family: 'Source Sans Pro', sans-serif; font-size: 24px;">Developer, Project Lead and Design Enthusiast</h4>
-                <!--<img id="bgImage" src='' />-->
-                <!--<em>"Over 9 years of experience in software development across industries!!"</em>-->
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="SiteNav">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#fun">Fun</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <header>
+    </header>
+    <div class="container-fluid">
+        <div class="row" id="home">
+            <div class="col-xs-12 col-sm-12 text-center" id="divHeader">
+                <span class="nameFontStyle whiteText">Dayanithy Mani</span>
+                <h1 class="whiteText">Project lead, Developer and Design Enthusiast</h1>
             </div>
         </div>
-        <div class="row" style="padding-top: 5%;">
-            <div class="col-xs-12 col-sm-3">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <i class="fa fa-user-secret fa-4x"></i>
-                    </div>
+        <div class="row">
+            <div class="col-xs-12">
+                 <div class="row text-center" style="padding-top: 15px; background-color: #ecf0f1; id="skillsHeader">
+                    <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;">Skills</h1>
                 </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Over 9 years of experience in software development across industries!!</h3>
+                <div class="row" id="skills" style="padding-top: 15px; padding-bottom: 15px; color: #616275; background-color: #ecf0f1; ">
+                    <div class="col-xs-12 col-sm-offset-1 col-sm-4">
+                        <div id="skillbox1" class="skillBox">
+                            <p><span style="font-size: x-large;"><i class="fa fa-server"></i> Core</span>
+                                .Net Framework, ASP.NET (WebForms & MVC), Web API, Entity Framework
+                            </p>
+                            <p> <span style="font-size: x-large;"><i class="fa fa-language"></i> Languages</span>
+                            C#, V.NET, C</p>
+                            <p> <span style="font-size: x-large;"><i class="fa fa-code"></i> Front-end</span>
+                            &nbsp;&nbsp;HTML, CSS, Bootstrap, Javascript, JQuery</p>
+                            <p><span style="font-size: x-large;"><i class="fa fa-database"></i> Back-end</span>
+                            &nbsp;&nbsp;&nbsp;&nbsp;SQL Server, Oracle</p>
+                                <p><span style="font-size: x-large;"><i class="fa fa-bar-chart"></i> Third party tools</span>
+                            Telerik, Kendo UI</p>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <i class="fa fa-google fa-4x"></i>
+                    <div class="col-xs-12 col-sm-3">
+                        <div id="skillbox2" class="skillBox">
+                            <p>Project planning</p>
+                            <p>Effort Estimation</p>
+                            <p>Risk management</p>
+                            <p>Business Continuity planning</p>
+                            <p>Task allocation & Tracking deliverables</p>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Love Google</h3> for inventing some of the best (arguably) products
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <i class="fa fa-apple fa-4x"></i>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Admire Apple</h3> for their design and user interface
-                    </div>
-                </div>
-            </div>
-             <div class="col-xs-12 col-sm-3">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <i class="fa fa-windows fa-4x"></i>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h3>Respect Microsoft</h3> for constantly trying to improve their products
+                    <div class="col-xs-12 col-sm-3">
+                        <div id="skillbox3" class="skillBox">
+                            <p>Developing ASP.NET MVC 5 Web Applications</p>
+                            <p> Microsoft Certified Professional Developer (ASP.NET 3.5)</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>            
+        </div>
+        
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="row text-center" id="funHeader" style="padding-top: 15px;">
+                    <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;">What I Love</h1>
+                </div>
+                <div class="row" id="fun" style="padding-top: 15px;">
+                    <div class="col-xs-12 col-sm-offset-1 col-sm-6">
+                        <ul class="nav nav-pills nav-justified">
+                            <li role="presentation" class="active"><a href="#photography" style="">Photography</a></li>
+                            <li role="presentation"><a href="#">Travel</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row" id="photography">
+                    <div class="col-xs-12">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv">
+                                <img src="Images/apple-692186.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail1" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/blue-1072366_1920.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail2" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/Background.png" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail3" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/black-1072366_640.jpg" style="max-width: 100%; max-height: 100%;"  class="thumbnail" id="thumbnail4" />
+                            </div>    
+                        </div>
+                        <div class="row" style="">
+                            <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv" >
+                                <img src="Images/Skyline.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail5" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/Presentation4.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail6" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/old-954310.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail7" />
+                            </div>
+                            <div class="col-xs-12 col-sm-2 imageDiv">
+                                <img src="Images/laptop-at-night-1114387_640.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail8"  />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <footer>
-        <p class="text-center">&copy; 2016 - Dayanithy Mani</p>
-    </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="" id="imagepreview" style="width: 100%; height: 75%;" >
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer><p class="text-center">&copy; 2016 - Dayanithy Mani</p></footer>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).click(function(){
+            $(".thumbnail").on("click", function() {
+                var imgID = $(this).attr('id');
+                $('#imagepreview').attr('src', $('#' + imgID).attr('src'));
+                $('#imagemodal').modal('show');
+            });
+        });
+    
+    </script>
 </body>
 </html>
-<script>
-   
-</script>
