--- a/Work.html
+++ b/Work.html
@@ -38,7 +38,7 @@
                             <img  src='What_I_Do_1024x768.png' />
                         </div>-->
                           <div class="col-xs-12 col-sm-offset-3 col-sm-3 col-md-offset-3 col-md-3 col-lg-offset-3 col-lg-3" >
-                            <h1 data-toggle="collapse"  data-target="#techDiv" class="toggleHeader"><i class="fa fa-cogs"></i> Technical skills</h1>
+                            <h1 data-toggle="collapse"  data-target="#techDiv" class="toggleHeader"><i class="fa fa-cogs  fa-spin"></i> Technical skills</h1>
                             <div id="techDiv" class="collapse in">
                                 <p><span style="font-size: x-large;"><i class="fa fa-server"></i> Core</span>
                                     <p>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-offset-3 col-md-9 col-lg-offset-3 col-lg-3">
-                                <h1  data-toggle="collapse"  data-target="#certSection"  class="toggleHeader"><i class="fa fa-certificate"></i>        Certifications</h1>
+                                <h1  data-toggle="collapse"  data-target="#certSection"  class="toggleHeader"><i class="fa fa-certificate fa-spin"></i>        Certifications</h1>
                                 <div id="certSection" class="collapse in text-left">
                                     <img src="Images/ms_cert_professional_logo_wht_rgb_256.png" style="max-width:100%;
 max-height:100%;" title="ASP.NET MVC 5" /> 
