--- a/Home.html
+++ b/Home.html
@@ -8,11 +8,12 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="Styles/Custom.css" />    
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="mainNav">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -22,13 +23,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Daya</a>
+            <a class="navbar-brand siteLogoFont" href="#header">Dayanithy</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="SiteNav">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right navlinkFont">
                 <li><a href="#header">Home</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#aboutMe">About Me</a></li>
                 <li><a href="#fun">Fun</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -41,34 +42,36 @@
         <div class="row" id="home">
             <div class="col-xs-12 col-sm-12 text-center" id="divHeader">
                 <span class="nameFontStyle whiteText">Dayanithy Mani</span>
-                <h1 class="whiteText">Project lead, Developer and Design Enthusiast</h1>
+                <h1 class="whiteText fadeInFromLeft">Project lead, Developer and Design Enthusiast</h1>
             </div>
         </div>
-        <div class="row" id="skills" style="padding-top: 15px; background-color: #ecf0f1; ">
+        <div class="row" id="aboutMe" style="padding-top: 15px; background-color: #ecf0f1; ">
             <div class="col-xs-12">
                  <div class="row text-center" id="skillsHeader">
                      <div class="col-xs-12">
-                    <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;">Skills</h1>
+                        <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;" class="fadeInFromLeft">About Me</h1>
+                        <p class="navlinkFont fadeInFromLeft">9+ years of experience in software development across industries!!</p>
                      </div>
+                </div>
+                <div class="row" id="skillsHeader2">
+                    <div class="col-xs-12 col-sm-offset-1 col-sm-11">
+                        <h2 style="text-transform: uppercase; color: #616275;" class="fadeInFromLeft">Skills</h2>
+                    </div>
                 </div>
                 <div class="row" id="skillBoxContainer" style="padding-top: 15px; padding-bottom: 15px; color: #616275;">
                     <div class="col-xs-12 col-sm-offset-1 col-sm-4">
-                        <div id="skillbox1" class="skillBox">
-                            <p><span style="font-size: x-large;"><i class="fa fa-server"></i> Core</span>
-                                .Net Framework, ASP.NET (WebForms & MVC), Web API, Entity Framework
-                            </p>
-                            <p> <span style="font-size: x-large;"><i class="fa fa-language"></i> Languages</span>
-                            C#, V.NET, C</p>
-                            <p> <span style="font-size: x-large;"><i class="fa fa-code"></i> Front-end</span>
-                            &nbsp;&nbsp;HTML, CSS, Bootstrap, Javascript, JQuery</p>
-                            <p><span style="font-size: x-large;"><i class="fa fa-database"></i> Back-end</span>
-                            &nbsp;&nbsp;&nbsp;&nbsp;SQL Server, Oracle</p>
-                                <p><span style="font-size: x-large;"><i class="fa fa-bar-chart"></i> Third party tools</span>
-                            Telerik, Kendo UI</p>
+                        <div id="skillbox1" class="skillBox fadeInFromLeft">
+                            <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #3ab0e2; padding-bottom: 10px;"><i class="fa fa-cogs" style=""></i>&nbsp;&nbsp;Technical</h2>
+                            <p>.Net Framework, ASP.NET (WebForms & MVC), Web API, Entity Framework</p>
+                            <p>C#, VB.NET, C</p>
+                            <p>HTML, CSS, Bootstrap, Javascript, JQuery</p>
+                            <p>SQL Server, Oracle</p>
+                            <p>Telerik, Kendo UI</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-3">
-                        <div id="skillbox2" class="skillBox">
+                        <div id="skillbox2" class="skillBox fadeInFromLeft">
+                            <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #34d293; padding-bottom: 10px;"><i class="fa fa-users"></i>&nbsp;&nbsp;Project Management</h2>
                             <p>Project planning</p>
                             <p>Effort Estimation</p>
                             <p>Risk management</p>
@@ -77,7 +80,8 @@
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-3">
-                        <div id="skillbox3" class="skillBox">
+                        <div id="skillbox3" class="skillBox fadeInFromLeft">
+                            <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #f7d861; padding-bottom: 10px;"><i class="fa fa-certificate"></i>&nbsp;&nbsp;Certifications</h2>
                             <p>Developing ASP.NET MVC 5 Web Applications</p>
                             <p> Microsoft Certified Professional Developer (ASP.NET 3.5)</p>
                         </div>
@@ -94,50 +98,47 @@
                      </div>
                 </div>
                 <div class="row" id="funNavbar" style="padding-top: 15px;">
-                    <div class="col-xs-12 col-sm-offset-1 col-sm-6">
-                        <ul class="nav nav-pills nav-justified">
-                            <li role="presentation" class="active"><a href="#photography" style="">Photography</a></li>
-                            <li role="presentation"><a href="#">Travel</a></li>
-                        </ul>
+                    <div class="col-xs-12 col-sm-offset-1 col-sm-4">
+                        <span class="whiteText" id="lblPhotography">Photography</span>
+                            <!--<li role="presentation"><a href="#">Travel</a></li>-->
                     </div>
                 </div>
                 <div class="row" id="photography">
                     <div class="col-xs-12">
                         <div class="row">
                             <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv">
-                                <img src="Images/apple-692186.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail1" />
+                                <img src="Images/IMG_3312_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail1" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/blue-1072366_1920.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail2" />
+                                <img src="Images/IMG_2826_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail2" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/Background.png" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail3" />
+                                <img src="Images/IMG_3117_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail3" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/black-1072366_640.jpg" style="max-width: 100%; max-height: 100%;"  class="thumbnail" id="thumbnail4" />
+                                <img src="Images/IMG_2410_CMP.jpg" style="max-width: 100%; max-height: 100%;"  class="thumbnail" id="thumbnail4" />
                             </div>    
                         </div>
                         <div class="row" style="">
                             <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv" >
-                                <img src="Images/Skyline.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail5" />
+                                <img src="Images/IMG_2794_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail5" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/Presentation4.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail6" />
+                                <img src="Images/IMG_1580_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail6" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/old-954310.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail7" />
+                                <img src="Images/IMG_2380_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail7" />
                             </div>
                             <div class="col-xs-12 col-sm-2 imageDiv">
-                                <img src="Images/laptop-at-night-1114387_640.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail8"  />
+                                <img src="Images/IMG_1804_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail8"  />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-      <div class="row" id="contact" style="background-color: #ecf0f1;">
-        <div class="col-xs-12 text-center">
+        <div class="row" id="contact" style="background-color: #ecf0f1;">
+            <div class="col-xs-12 text-center">
               <div class="row text-center" id="contactHeader" style="padding-top: 15px;">
                      <div class="col-xs-12">
                         <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;">Wanna say hi</h1>
@@ -155,14 +156,13 @@
                             <div class="col-xs-4">
                                 <a href="https://twitter.com/Dayanithy" target="_blank"><img src="Images/twitter.svg" style="max-width: 50%; max-height: 50%;" /></a>
                             </div>
-                            <!--<div class="col-xs-3">
-                                <img src="Images/Facebook.svg" style="max-width: 50%; max-height: 50%;"  />
-                            </div>-->
                         </div>
                     </div>
                  </div>
+            </div>
         </div>
-      </div>
+    </div>
+      
     <!-- Modal -->
     <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
