--- a/Home.html
+++ b/Home.html
@@ -45,10 +45,10 @@
                 <h1 class="whiteText fadeInFromLeft">Project lead, Developer and Design Enthusiast</h1>
             </div>
         </div>
-        <div class="row" id="aboutMe" style="padding-top: 15px; background-color: #ecf0f1; ">
+        <div class="row" id="aboutMe" style="background-color: #ecf0f1;">
             <div class="col-xs-12">
                  <div class="row text-center" id="skillsHeader">
-                     <div class="col-xs-12">
+                     <div class="col-xs-12" style="color: #616275;">
                         <h1 style="text-transform: uppercase; color: #616275; font-size: 42px;" class="fadeInFromLeft">About Me</h1>
                         <p class="navlinkFont fadeInFromLeft">9+ years of experience in software development across industries!!</p>
                      </div>
@@ -69,7 +69,7 @@
                             <p>Telerik, Kendo UI</p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-3">
+                    <div class="col-xs-12 col-sm-3 deviceTopPadding">
                         <div id="skillbox2" class="skillBox fadeInFromLeft">
                             <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #34d293; padding-bottom: 10px;"><i class="fa fa-users"></i>&nbsp;&nbsp;Project Management</h2>
                             <p>Project planning</p>
@@ -79,7 +79,7 @@
                             <p>Task allocation & Tracking deliverables</p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-3">
+                    <div class="col-xs-12 col-sm-3 deviceTopPadding">
                         <div id="skillbox3" class="skillBox fadeInFromLeft">
                             <h2 class="text-center" style="font-weight: bold;border-bottom: 1px solid #f7d861; padding-bottom: 10px;"><i class="fa fa-certificate"></i>&nbsp;&nbsp;Certifications</h2>
                             <p>Developing ASP.NET MVC 5 Web Applications</p>
@@ -91,10 +91,9 @@
         </div>        
         <div class="row" id="fun" style="background-color: #34495e;">
             <div class="col-xs-12">
-                <div class="row text-center" id="funHeader" style="padding-top: 15px;">
+                <div class="row text-center" id="funHeader">
                      <div class="col-xs-12">
-                    
-                    <h1 style="text-transform: uppercase; color: #616275; font-size: 42px; color: #fff;">What I Love</h1>
+                        <h1 style="text-transform: uppercase; color: #616275; font-size: 42px; color: #fff;">What I Love</h1>
                      </div>
                 </div>
                 <div class="row" id="funNavbar" style="padding-top: 15px;">
@@ -106,30 +105,30 @@
                 <div class="row" id="photography">
                     <div class="col-xs-12">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-offset-1 col-sm-2 imageDiv">
                                 <img src="Images/IMG_3312_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail1" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_2826_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail2" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_3117_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail3" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_2410_CMP.jpg" style="max-width: 100%; max-height: 100%;"  class="thumbnail" id="thumbnail4" />
                             </div>    
                         </div>
                         <div class="row" style="">
-                            <div class="col-xs-12 col-sm-offset-1 col-sm-2 imageDiv" >
+                            <div class="col-xs-6 col-sm-offset-1 col-sm-2 imageDiv" >
                                 <img src="Images/IMG_2794_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail5" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_1580_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail6" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_2380_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail"  id="thumbnail7" />
                             </div>
-                            <div class="col-xs-12 col-sm-2 imageDiv">
+                            <div class="col-xs-6 col-sm-2 imageDiv">
                                 <img src="Images/IMG_1804_CMP.jpg" style="max-width: 100%; max-height: 100%;" class="thumbnail" id="thumbnail8"  />
                             </div>
                         </div>
@@ -148,13 +147,13 @@
                     <div class="col-xs-12 col-sm-offset-3 col-sm-6">
                         <div class="row">
                             <div class="col-xs-4">
-                                <a href="https://linkedin.com/in/dayanithy" target="_blank"><img src="Images/linkedin.svg" style="max-width: 50%; max-height: 50%;" /></a>
+                                <a href="https://linkedin.com/in/dayanithy" title="LinkedIn" target="_blank"><img src="Images/linkedin.svg" style="max-width: 50%; max-height: 50%;" /></a>
                             </div>
                             <div class="col-xs-4">
-                               <a href="https://github.com/Dayanithy" target="_blank"><img src="Images/Octocat.png"  style="max-width: 50%; max-height: 50%;" /></a>
+                                <a href="https://twitter.com/Dayanithy" title="Twitter" target="_blank"><img src="Images/twitter.svg" style="max-width: 50%; max-height: 50%;" /></a>
                             </div>
                             <div class="col-xs-4">
-                                <a href="https://twitter.com/Dayanithy" target="_blank"><img src="Images/twitter.svg" style="max-width: 50%; max-height: 50%;" /></a>
+                               <a href="https://github.com/Dayanithy" title="GitHub" target="_blank"><img src="Images/octocat.png"  style="max-width: 50%; max-height: 50%;" /></a>
                             </div>
                         </div>
                     </div>
@@ -185,7 +184,7 @@
 
                 $('html, body').stop().animate(
                     {
-                        'scrollTop': $target.offset().top - 100
+                        'scrollTop': $target.offset().top
                     },
                     900,
                     'swing',
